# These version constraints come from Zendar's internal libraries that
# require this package, just to reduce the chance of version
# inconsistencies.

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cu121/torch"
verify_ssl = true
name = "torch-cu121"
type = "find-links"


[project]
name = "torchsparse"
description = ""
authors = []
dependencies = ["torch==2.1.2+cu121", "tqdm", "numpy", "setuptools"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "torchsparse.__version__"}

[build-system]
requires = ["torch==2.1.2+cu121", "tqdm", "numpy", "setuptools"]
